# FinGuard

./: .gitignore  CHANGELOG.md  CNAME  LICENSE  README.md  benchmark.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: bandit.yml  ci.yml  deploy-docs.yml  python-publish.yml
components/tool_guards/: index.html
cookbooks/fastapi_gateway/: index.html
docs/: CNAME  custom_policies.md  index.md  setup.md  user_guide.md
docs/components/: observability.md  pii.md  policies.md  tool_guards.md
docs/cookbooks/: fastapi_gateway.md  langchain_agent.md
examples/: agent_backtracking.py  audit_demo.py  banking_chatbot_policy.yaml  demo.py  observability_demo.py  tool_guards.py
finguard/: __init__.py  audit.py  cli.py  config.py  core.py  exceptions.py  pipeline.py  router.py  schema.py  utils.py
finguard/audit/: __init__.py  logger.py  trace.py
finguard/audit/backends/: __init__.py  base.py  file.py  langfuse.py  memory.py  otel.py
finguard/pii/: __init__.py  engine.py  profiles.py  recognizers.py
finguard/policies/: banking_support_chatbot_v1.yaml  compliance_officer_strict.yaml  default.yaml  fast_lane.yaml  fraud_ops_agent_v1.yaml  high_security.yaml  retail_banking.yaml  retail_banking_turbo.yaml  wealth_advisor.yaml  wealth_mgmt_assistant_v1.yaml
finguard/tools/: __init__.py  guard.py  schema.py  tracker.py
finguard/tools/adapters/: __init__.py  langchain.py  vanilla.py
finguard/validators/: __init__.py  compliance.py  financial.py  numerical.py  presidio_ext.py  regulatory.py
notebooks/: FinGuard_Demo.ipynb
search/: search_index.json
setup/: index.html
site/: 404.html  index.html
site/components/observability/: index.html
site/components/pii/: index.html
site/components/policies/: index.html
site/cookbooks/langchain_agent/: index.html
site/search/: search_index.json
tests/: test_advanced.py  test_audit.py  test_core.py  test_observability.py  test_pii_engine.py  test_router.py  test_tools.py
