[project]
name = "finguard"
version = "0.1.0"
description = "FinGuard \u2014 Open-source LLM safety layer for financial AI"
authors = [
    { name = "FinGuard Authors" }
]
requires-python = ">=3.10"
dependencies = [
    "presidio-analyzer>=2.2.35",
    "presidio-anonymizer>=2.2.35",
    "llm-guard>=0.3.14",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "spacy>=3.7.0",
    "langfuse>=2.0.0",
    "opentelemetry-api>=1.20.0",
    "numpy<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
