[project]
name = "finguard"
version = "0.2.0"
description = "FinGuard \u2014 Open-source LLM safety layer for financial AI"
authors = [
    { name = "FinGuard Authors" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "presidio-analyzer>=2.2.35",
    "presidio-anonymizer>=2.2.35",
    "llm-guard>=0.3.14",
    "pydantic",
    "pyyaml>=6.0",
    "onnx",
    "onnxruntime",
    "optimum",
    "huggingface_hub[hf_xet]"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["finguard"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
